Added skills section, added skill images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Melissa Mahoney | Information Developer</title>
+    <title>Melissa Mahoney | Tech Writer & UXer</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -54,6 +54,9 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
+                        <a href="#skills">Skills</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
@@ -85,6 +88,50 @@
         </div>
     </header>
 
+    <!-- Skills Grid Section -->
+    <section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Skills</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/cabin.png" class="img-responsive" alt=""> <!--image 1-->
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/cake.png" class="img-responsive" alt=""> <!--image 2-->
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal"> 
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/circus.png" class="img-responsive" alt=""> <!--image 3-->
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
         <div class="container">
@@ -170,14 +217,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I'm passionate about making the nitty-gritty elegant, the convoluted coalesce, and the highly technical more practical. I swan-dive into technologies I don't know and crave opportunities to tinker. I thrive on strong relationships with SMEs and stakeholders, and ask the right questions so my users don't have to.</p>
+                    <p>I get excited about making the nitty-gritty elegant, the convoluted coalesce, and the highly technical more practical. I swan-dive into technologies I don't know and crave opportunities to tinker. I thrive on strong relationships with SMEs and stakeholders, and ask the right questions so my users don't have to.</p>
                 </div>
                 <div class="col-lg-4">
                     <p>Words are my passion. Clarifying one tiny chunk of the universe through clean, concise documentation is my calling.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                        <i class="fa fa-download"></i> Download Resume
                     </a>
                 </div>
             </div>
