Skills section set-up

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Melissa Mahoney</span>
+                        <span class="name">Hi, I'm Melissa.</span>
                         <hr class="star-light">
-                        <span class="skills">Information Developer & Technical Writer</span>
+                        <span class="skills">Technical Writer & UX Professional</span>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
     </header>
 
     <!-- Skills Grid Section -->
-    <section id="portfolio">
+    <section id="skills">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -105,7 +105,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt=""> <!--image 1-->
+                        <img src="img/skills/coding.png" class="img-responsive" alt=""> <!--image 1-->
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
