--- a/index.html
+++ b/index.html
@@ -100,12 +100,8 @@
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
                         <img src="img/skills/coding.png" class="img-responsive" alt=""> <!--image 1-->
+                        <p>Technical Writing</p>
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
